examples/test/testpolicy1693.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1693
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key39: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value28
          key0: value27
      podSelector:
        matchLabels:
          key35: value1
          key24: value12
